--- a/.github/workflows/openhands_review.yml
+++ b/.github/workflows/openhands_review.yml
@@ -80,42 +80,59 @@ jobs:
             echo '```' >> quality_report.md
           } || true
 
-      # Note: .openhands_instructions file should exist in the repository root
+      - name: Create OpenHands instructions
+        run: |
+          cat > .openhands_instructions << 'EOL'
+          # OpenHands Code Quality Review Instructions
+
+          **Role:** You are a senior code quality analyst responsible for evaluating pull requests.
+
+          **Task:** Review the code changes and quality check results to determine if the PR meets our standards.
+
+          **Code Quality Standards:**
+          1. Code follows consistent naming conventions and style guidelines
+          2. No code smells or anti-patterns are present
+          3. Functions and classes are well-documented with clear purpose
+          4. Code is DRY (Don't Repeat Yourself) and follows SOLID principles
+          5. All automated quality checks (Black, Ruff, MyPy) must pass
+          6. No security vulnerabilities or performance bottlenecks
+          7. Tests are present for new functionality (if applicable)
+
+          **Response Format:**
+          - Output exactly "GOOD" if the code meets ALL standards
+          - Output exactly "BAD" if ANY standard is not met
+          DO NOT provide explanations or suggestions - only output GOOD or BAD
+          EOL
 
       - name: Run OpenHands Review
         id: openhands_review
-        if: env.BLACK_PASSED == 'true' && env.RUFF_PASSED == 'true' && env.MYPY_PASSED == 'true'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           LLM_API_KEY: ${{ secrets.LLM_API_KEY }}
-          LLM_MODEL: "claude-3-5-sonnet-20241022"
+          LLM_MODEL: "claude-3-sonnet-20240229"
           LOG_ALL_EVENTS: "true"
         run: |
-          # Verify .openhands_instructions exists
-          if [ ! -f ".openhands_instructions" ]; then
-            echo "Error: .openhands_instructions file not found in repository"
-            exit 1
+          # Get the quality check results
+          CHECKS_PASSED=true
+          if [ "$BLACK_PASSED" = "false" ] || [ "$RUFF_PASSED" = "false" ] || [ "$MYPY_PASSED" = "false" ]; then
+            CHECKS_PASSED=false
           fi
           
-          # Run OpenHands review and save output
-          review_output=$(python -m openhands.core.main \
-            -t "Review PR #${{ github.event.pull_request.number }} in ${{ github.repository }} according to .openhands_instructions. Output only GOOD or BAD." \
-            --eval-output-dir ./eval_output \
-            --no-auto-continue \
-            -i 50 \
-            -b 50 \
-            --eval-n-limit 50)
-          
-          # Save the output for debugging
-          echo "$review_output" > openhands_output.txt
-          
-          # Get the last line of output and check if it's GOOD or BAD
-          result=$(echo "$review_output" | tail -n1 | grep -E '^(GOOD|BAD)$' || echo "BAD")
-          
-          echo "OpenHands result: $result"
-          
-          if [ "$result" = "GOOD" ]; then
-            echo "OPENHANDS_PASSED=true" >> $GITHUB_ENV
+          if [ "$CHECKS_PASSED" = "true" ]; then
+            # Only run OpenHands review if automated checks pass
+            review_output=$(python -m openhands.core.main \
+              -t "Review PR #${{ github.event.pull_request.number }} in ${{ github.repository }} according to .openhands_instructions. Output only GOOD or BAD." \
+              --eval-output-dir ./eval_output \
+              --no-auto-continue \
+              -i 50 \
+              -b 50 \
+              --eval-n-limit 50 || true)
+            
+            if echo "$review_output" | grep -q "GOOD"; then
+              echo "OPENHANDS_PASSED=true" >> $GITHUB_ENV
+            else
+              echo "OPENHANDS_PASSED=false" >> $GITHUB_ENV
+            fi
           else
             echo "OPENHANDS_PASSED=false" >> $GITHUB_ENV
           fi
@@ -127,40 +144,13 @@ jobs:
           # Read the quality report
           QUALITY_REPORT=$(cat quality_report.md)
           
-          # Check if all automated checks passed
-          CHECKS_PASSED="true"
-          if [ "$BLACK_PASSED" != "true" ] || [ "$RUFF_PASSED" != "true" ] || [ "$MYPY_PASSED" != "true" ]; then
-            CHECKS_PASSED="false"
-          fi
-          
-          # If automated checks failed, don't consider OpenHands result
-          if [ "$CHECKS_PASSED" = "false" ]; then
-            gh pr comment "${{ github.event.pull_request.number }}" --body "❌ **Code Quality Review Failed**
-
-            Automated quality checks did not pass. Please review the report below and make necessary changes.
-
-            $QUALITY_REPORT"
-            
-            gh pr review "${{ github.event.pull_request.number }}" --request-changes -b "Code quality standards not met. See the detailed report in the PR comments."
-            exit 0
-          fi
-          
-          # If we get here, all automated checks passed, now check OpenHands result
-          # Get the last line of output and check if it's GOOD or BAD
-          OPENHANDS_RESULT=$(cat openhands_output.txt | tail -n1 | grep -E '^(GOOD|BAD)$' || echo "BAD")
-          echo "Final OpenHands result: $OPENHANDS_RESULT"
-          
-          if [ "$OPENHANDS_RESULT" = "GOOD" ]; then
+          if [ "$BLACK_PASSED" = "true" ] && [ "$RUFF_PASSED" = "true" ] && [ "$MYPY_PASSED" = "true" ] && [ "$OPENHANDS_PASSED" = "true" ]; then
+            # All checks passed - approve and auto-merge
             gh pr comment "${{ github.event.pull_request.number }}" --body "✅ **Code Quality Review Passed**
 
             All automated checks and OpenHands review passed. Auto-merging PR.
 
-            $QUALITY_REPORT
-
-            OpenHands Review Output:
-            \`\`\`
-            $(cat openhands_output.txt || echo "No output available")
-            \`\`\`"
+            $QUALITY_REPORT"
             
             gh pr review "${{ github.event.pull_request.number }}" --approve -b "All code quality standards met."
             
@@ -168,17 +158,12 @@ jobs:
             gh pr merge "${{ github.event.pull_request.number }}" --auto --merge
             gh pr merge "${{ github.event.pull_request.number }}" --merge
           else
+            # Some checks failed - request changes
             gh pr comment "${{ github.event.pull_request.number }}" --body "❌ **Code Quality Review Failed**
 
-            While automated checks passed, OpenHands AI review found quality issues. Please review your code for potential improvements.
+            Some quality checks did not pass. Please review the report below and make necessary changes.
 
-            $QUALITY_REPORT
-
-            OpenHands Review Output:
-            \`\`\`
-            $(cat openhands_output.txt || echo "No output available")
-            \`\`\`"
+            $QUALITY_REPORT"
             
-            gh pr review "${{ github.event.pull_request.number }}" --request-changes -b "Code quality standards not met according to OpenHands AI review."
-            exit 1
+            gh pr review "${{ github.event.pull_request.number }}" --request-changes -b "Code quality standards not met. See the detailed report in the PR comments."
           fi
