--- a/.github/workflows/openhands_review.yml
+++ b/.github/workflows/openhands_review.yml
@@ -102,12 +102,10 @@ jobs:
           review_output=$(timeout 300s python -m openhands.core.main \
             -t "Review PR #${{ github.event.pull_request.number }} in ${{ github.repository }} according to .openhands_instructions. Output only GOOD or BAD." \
             --eval-output-dir ./eval_output \
-            --no-auto-continue \
-            --no-interactive \
             -i 50 \
             -b 50 \
-            --eval-n-limit 50 2>&1 || true)
-          
+            --eval-n-limit 50 2>&1 || true)    
+            --eval-n-limit 50 \
           # Save the output for debugging
           echo "$review_output" > openhands_output.txt
           
