--- a/.github/workflows/openhands_review.yml
+++ b/.github/workflows/openhands_review.yml
@@ -1,4 +1,4 @@
-name: OpenHands Code Quality Review (Direct Push - UNSAFE EXAMPLE)
+name: OpenHands Code Quality Review
 
 on:
   pull_request:
@@ -8,7 +8,7 @@ jobs:
   code-quality-review:
     runs-on: ubuntu-latest
     permissions:
-      contents: write  # CRITICAL:  Allows writing to the repo!
+      contents: write
       pull-requests: write
       issues: write
 
@@ -17,7 +17,6 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          ref: ${{ github.event.pull_request.head.sha }} # Check out the specific PR commit
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -30,7 +29,60 @@ jobs:
           python -m pip install --upgrade pip
           pip install openhands-ai black mypy ruff
 
-      - name: Run OpenHands Review (and potentially modify code)
+      - name: Run code quality checks
+        id: quality_checks
+        continue-on-error: true
+        run: |
+          # Run various code quality tools and store their output
+          {
+            echo "### Code Quality Analysis Results" > quality_report.md
+            echo "" >> quality_report.md
+
+            # Run Black for code formatting
+            echo "#### Black (Code Formatting)" >> quality_report.md
+            echo '```' >> quality_report.md
+            if black --check --diff .; then
+              echo "✅ Code formatting is consistent with Black standards" >> quality_report.md
+              echo "BLACK_PASSED=true" >> $GITHUB_ENV
+            else
+              echo "❌ Code formatting issues found" >> quality_report.md
+              black --check --diff . >> quality_report.md 2>&1
+              echo "BLACK_PASSED=false" >> $GITHUB_ENV
+            fi
+            echo '```' >> quality_report.md
+            echo "" >> quality_report.md
+
+            # Run Ruff for fast Python linting
+            echo "#### Ruff (Fast Python Linter)" >> quality_report.md
+            echo '```' >> quality_report.md
+            if ruff check .; then
+              echo "✅ No issues found by Ruff" >> quality_report.md
+              echo "RUFF_PASSED=true" >> $GITHUB_ENV
+            else
+              echo "❌ Ruff found code quality issues" >> quality_report.md
+              ruff check . >> quality_report.md 2>&1
+              echo "RUFF_PASSED=false" >> $GITHUB_ENV
+            fi
+            echo '```' >> quality_report.md
+            echo "" >> quality_report.md
+
+            # Run MyPy for type checking
+            echo "#### MyPy (Type Checking)" >> quality_report.md
+            echo '```' >> quality_report.md
+            if mypy . --ignore-missing-imports; then
+              echo "✅ Type checking passed" >> quality_report.md
+              echo "MYPY_PASSED=true" >> $GITHUB_ENV
+            else
+              echo "❌ Type checking issues found" >> quality_report.md
+              mypy . --ignore-missing-imports >> quality_report.md 2>&1
+              echo "MYPY_PASSED=false" >> $GITHUB_ENV
+            fi
+            echo '```' >> quality_report.md
+          } || true
+
+      - name: Run OpenHands Review
+        id: openhands_review
+        if: env.BLACK_PASSED == 'true' && env.RUFF_PASSED == 'true' && env.MYPY_PASSED == 'true'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           LLM_API_KEY: ${{ secrets.LLM_API_KEY }}
@@ -43,36 +95,99 @@ jobs:
             exit 1
           fi
 
-          # Run OpenHands review - NO GOOD/BAD requirement
+          # Run OpenHands review and save output
           review_output=$(python -m openhands.core.main \
-            -t "Review PR #${{ github.event.pull_request.number }} in ${{ github.repository }} according to .openhands_instructions. Identify and fix code quality issues directly." \
+            -t "Review PR #${{ github.event.pull_request.number }} in ${{ github.repository }} according to .openhands_instructions. Output only GOOD or BAD." \
             --eval-output-dir ./eval_output \
             --no-auto-continue \
             -i 50 \
             -b 50 \
             --eval-n-limit 50)
 
-          echo "$review_output" > openhands_output.txt  # Save for debugging
+          # Save the output for debugging
+          echo "$review_output" > openhands_output.txt
 
-          # ---  GIT OPERATIONS  ---
-          git config --global user.name "OpenHands Bot"
-          git config --global user.email "openhands-bot@example.com" # Replace with a real email
+          # Extract just the GOOD/BAD from the output
+          result=$(echo "$review_output" | grep -o -E "(GOOD|BAD)\$" | head -n1 | tr -d '\n' | tr -d ' ')
 
-          # Check if there were changes
-          if [[ $(git status --porcelain) ]]; then
-            git add .
-            git commit -m "Automated code quality improvements by OpenHands"
-            git push origin HEAD:${{ github.event.pull_request.head.ref }}  # Push to the PR branch
-            echo "Changes pushed to the pull request."
-          else
-            echo "No changes made by OpenHands."
+          # If no match found, try to extract from the thought text
+          if [ -z "$result" ]; then
+            if echo "$review_output" | grep -q "I will output: GOOD"; then
+              result="GOOD"
+            elif echo "$review_output" | grep -q "I will output: BAD"; then
+              result="BAD"
+            else
+              echo "Warning: Could not determine GOOD/BAD result from OpenHands output.  Defaulting to BAD."
+              result="BAD"
+            fi
           fi
 
-      - name: Comment on PR with OpenHands Output
+          echo "OpenHands result: $result"
+
+          if [ "$result" = "GOOD" ]; then
+            echo "OPENHANDS_PASSED=true" >> $GITHUB_ENV
+          else
+            echo "OPENHANDS_PASSED=false" >> $GITHUB_ENV
+          fi
+
+      - name: Process review results
         env:
           GH_TOKEN: ${{ github.token }}
         run: |
-          gh pr comment "${{ github.event.pull_request.number }}" --body "OpenHands review output:
-          \`\`\`
-          $(cat openhands_output.txt || echo "No output available")
-          \`\`\`"
+          # Read the quality report
+          QUALITY_REPORT=$(cat quality_report.md)
+
+          # Check if all automated checks passed
+          CHECKS_PASSED="true"
+          if [ "$BLACK_PASSED" != "true" ] || [ "$RUFF_PASSED" != "true" ] || [ "$MYPY_PASSED" != "true" ]; then
+            CHECKS_PASSED="false"
+          fi
+
+          # If automated checks failed, don't consider OpenHands result
+          if [ "$CHECKS_PASSED" = "false" ]; then
+            gh pr comment "${{ github.event.pull_request.number }}" --body "❌ **Code Quality Review Failed**
+
+            Automated quality checks did not pass. Please review the report below and make necessary changes.
+
+            $QUALITY_REPORT"
+
+            gh pr review "${{ github.event.pull_request.number }}" --request-changes -b "Code quality standards not met. See the detailed report in the PR comments."
+            exit 0
+          fi
+
+          # If we get here, all automated checks passed, now check OpenHands result
+          if [ "$OPENHANDS_PASSED" = "true" ]; then
+            gh pr comment "${{ github.event.pull_request.number }}" --body "✅ **Code Quality Review Passed**
+
+            All automated checks and OpenHands review passed.  Approving the PR.
+
+            $QUALITY_REPORT
+
+            OpenHands Review Output:
+            \`\`\`
+            $(cat openhands_output.txt || echo "No output available")
+            \`\`\`"
+
+            gh pr review "${{ github.event.pull_request.number }}" --approve -b "All code quality standards met."
+
+            gh pr merge --auto --merge "${{ github.event.pull_request.number }}"
+          else
+            # Extract suggestions from OpenHands output
+            SUGGESTIONS=$(grep -oP '(?<=Suggestions: ).*' openhands_output.txt || echo "No specific suggestions found.")
+
+            gh pr comment "${{ github.event.pull_request.number }}" --body "❌ **Code Quality Review Failed**
+
+            While automated checks passed, OpenHands AI review found quality issues. Please review the following suggestions:
+
+            $SUGGESTIONS
+
+            $QUALITY_REPORT
+
+            OpenHands Review Output:
+            \`\`\`
+            $(cat openhands_output.txt || echo "No output available")
+            \`\`\`"
+
+            gh pr review "${{ github.event.pull_request.number }}" --request-changes -b "Code quality standards not met according to OpenHands AI review.  See comments for suggestions."
+            exit 1
+          fi
