--- a/.github/workflows/openhands_review.yml
+++ b/.github/workflows/openhands_review.yml
@@ -74,9 +74,14 @@ jobs:
           WORKSPACE_BASE: ${{ github.workspace }}
           LLM_MODEL: "anthropic/claude-3-5-sonnet-20241022"
         run: |
+          # Create state directory with proper permissions
+          mkdir -p ${GITHUB_WORKSPACE}/.openhands-state
+          chmod -R 777 ${GITHUB_WORKSPACE}/.openhands-state
+
           TASK_INSTRUCTION="Review PR #${{ github.event.pull_request.number }} in ${{ github.repository }} according to .openhands_instructions. Output only GOOD or BAD."
 
           docker run --rm \
+            --user root \
             -e SANDBOX_RUNTIME_CONTAINER_IMAGE=docker.all-hands.dev/all-hands-ai/runtime:0.24-nikolaik \
             -e SANDBOX_USER_ID=$(id -u) \
             -e WORKSPACE_MOUNT_PATH=$WORKSPACE_BASE \
@@ -85,7 +90,7 @@ jobs:
             -e LOG_ALL_EVENTS=true \
             -v $WORKSPACE_BASE:/opt/workspace_base \
             -v /var/run/docker.sock:/var/run/docker.sock \
-            -v $HOME/.openhands-state:/.openhands-state \
+            -v ${GITHUB_WORKSPACE}/.openhands-state:/.openhands-state \
             --add-host host.docker.internal:host-gateway \
             docker.all-hands.dev/all-hands-ai/openhands:0.24 \
             python -m openhands.core.main \
