from r1-v2.5 to gpt v1

--- a/.github/workflows/openhands_review.yml
+++ b/.github/workflows/openhands_review.yml
@@ -88,7 +88,7 @@ jobs:
           # Format task instruction
           TASK_INSTRUCTION="Review PR #${{ github.event.pull_request.number }} in ${{ github.repository }} according to .openhands_instructions. Output EXACTLY 'GOOD' or 'BAD'. PR changes: $PR_FILES"
 
-          # Run OpenHands with valid arguments
+          # Run OpenHands with valid arguments and redirect input from /dev/null
           docker run --rm \
             --user root \
             -e SANDBOX_RUNTIME_CONTAINER_IMAGE=docker.all-hands.dev/all-hands-ai/runtime:0.24-nikolaik \
@@ -108,7 +108,7 @@ jobs:
             --eval-output-dir ./eval_output \
             -i 50 \
             -b 50 \
-            --eval-n-limit 50 > openhands_output.log
+            --eval-n-limit 50 < /dev/null > openhands_output.log
 
           # Strict result parsing
           if grep -qx "GOOD" openhands_output.log; then
